# skyreport

./: .gitmodules  CMakeLists.txt  README.md  TODO.txt
source/: bh1750.c  main.c  sqm_le.c  wh2600.c
source/include/: bh1750.h  configuration.h  reporter_error.h  settings.h  sqm_le.h  wh2600.h
tests/: CMakeLists.txt  bh1750_test.c  sqm_le_test.c  weather_test.c
